🐛 FIX: Homepage spacing issue

--- a/components/global/PostList/PostList.module.css
+++ b/components/global/PostList/PostList.module.css
@@ -6,7 +6,14 @@
     padding-bottom: 1rem;
     max-width: 1300px;
     padding-right: 1rem;
+    padding-left: 1rem;
     width: 100%;
+}
+
+@media (min-width: 768px){
+    .topContainer {
+        padding-left: 0;
+    }
 }
 
 .stackableTopContainer {
